--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "browserslist": "^4.17.1",
     "core-js": "3.18.1",
     "moment": "2.29.1",
     "register-service-worker": "1.7.2",
-    "vue": "2.6.14",
+    "vue": "^2.6.14",
     "vuex": "3.6.2"
   },
   "devDependencies": {
