--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "2.29.1",
     "register-service-worker": "1.7.2",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.7.4",
     "vuex": "3.6.2"
   },
   "devDependencies": {
