--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bootstrap-vue": "^2.21.2",
     "browserslist": "^4.17.1",
     "core-js": "3.18.1",
-    "moment": "2.29.1",
+    "moment": "^2.29.1",
     "register-service-worker": "1.7.2",
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
