--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "register-service-worker": "1.7.2",
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
+    "vue-toast-notification": "^0.6.2",
     "vuex": "3.6.2"
   },
   "devDependencies": {
