--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.6.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "browserslist": "^4.17.1",
@@ -18,6 +19,8 @@
     "register-service-worker": "1.7.2",
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
+    "vue-listen-voice": "^1.0.4",
+    "vue-recaptcha": "^2.0.2",
     "vue-toast-notification": "^0.6.2",
     "vuex": "3.6.2"
   },
