--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "3.26.0",
     "moment": "^2.29.4",
     "register-service-worker": "1.7.2",
+    "ts-steganography": "^3.0.2",
     "vue": "^2.6.13",
     "vue-cookies": "^1.8.2",
     "vue-listen-voice": "^1.0.4",
